--- a/src/main/resources/templates/app-profile.html
+++ b/src/main/resources/templates/app-profile.html
@@ -42,6 +42,7 @@
 					<li class="label">工作</li>
 					<li><a class="sidebar-sub-toggle"><i class="ti-heart"></i> 医疗服务 <span class="sidebar-collapse-icon ti-angle-down"></span></a>
                         <ul>
+                            <li><a th:href="@{new_patient}">新建病人</a></li>
                             <li><a th:href="@{new_record}">新开病例</a></li>
                             <li><a th:href="@{new_prescription}">新开处方</a></li>
                         </ul>
