--- a/src/main/resources/templates/new_record.html
+++ b/src/main/resources/templates/new_record.html
@@ -42,6 +42,7 @@
 					<li class="label">工作</li>
 					<li class="active open"><a class="sidebar-sub-toggle"><i class="ti-heart"></i> 医疗服务 <span class="sidebar-collapse-icon ti-angle-down"></span></a>
                         <ul>
+                            <li><a th:href="@{new_patient}">新建病人</a></li>
                             <li class="active"><a th:href="@{new_record}">新开病例</a></li>
                             <li><a th:href="@{new_prescription}">新开处方</a></li>
                         </ul>
@@ -254,58 +255,23 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="card alert">
-                                <form th:action="@{/newInfo}">
+                                <form th:action="@{/newRecord}">
                                     <div class="form_block">
                                         <h3>基本信息</h3>
-                                        <h5>患者id:1202391</h5>
                                         <div class="col-lg-3">
                                             <div class="form-group">
                                                 <label> 医生ID </label>
                                                 <input name="doctor_id" type="text" size="8">
                                             </div>
                                             <div class="form-group">
-                                                <label> 病人姓名 </label>
-                                                <input name="patient_name" type="text" size="8">
-                                            </div>
-                                            <div class="form-group">
-                                                <label> 性别 </label>
-                                                <input name="gender" type="text" size="8">
-                                            </div>
-                                            <div class="form-group">
-                                                <label> 年龄 </label>
-                                                <input name="age" type="text" size="3">
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <div class="form-group">
-                                                <label>联系方式</label>
-                                                <input name="contact" type="text" size='18'>
-                                            </div>
-                                            <div class="form-group">
-                                                <label>身份证号</label>
-                                                <input name="IDcard_No" type="text" size='18'>
-                                            </div>
-                                            <div class="form-group">
-                                                <label>家庭住址</label>
-                                                <input name="city" type="text" size='6'>市
-												<input name="district" type="text" size='6'>区
-												<input name="street" type="text" size='28'>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-5">
-                                            <div class="form-group">
-                                                <label>关系人姓名</label>
-                                                <input name="related_name" type="text" size="6">
-                                            </div>
-                                            <div class="form-group">
-                                                <label>关系人联系方式</label>
-                                                <input name="related_phonenumber" type="text" size="18"><br/>
+                                                <label> 病人ID </label>
+                                                <input name="patient_id" type="text" size="8">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="form_block">
                                         <h3>身体信息 </h3>
-                                        <div class="col-lg-3">
+                                        <div class="col-lg-5">
                                             <div class="form-group">
                                                 <label>体温</label>
                                                 <input name="body_temperature" type="text" size="6">℃
@@ -319,7 +285,7 @@
                                                 <input name="pulse" type="text" size="6">次/分
                                             </div>
                                         </div>
-                                        <div class="col-lg-4">
+                                        <div class="col-lg-5">
                                             <div class="form-group">
                                                 <label>血压</label>
                                                 <input name="blood_pressure_high" type="text" size="6">/<input name="blood_pressure_low" type="text" size="6">mmHg
@@ -328,20 +294,11 @@
                                                 <label>血糖</label>
                                                 <input name="blood_glucose" type="text" size="6">mmol/L
                                             </div>
-                                        </div>
-                                        <div class="col-lg-4">
                                             <div class="form-group">
                                                 <label>血脂</label>
                                                 <input name="blood_fat" type="text" size="6">mmol/L
                                             </div>
-                                            <div class="form-group">
-                                                <label>身高</label>
-                                                <input name="height" type="text" size="6">cm
-                                            </div>
-                                            <div class="form-group">
-                                                <label>体重</label>
-                                                <input name="weight" type="text" size="6">kg
-                                            </div>
+
                                         </div>
                                     </div>
                                     <div class="form_block">
