--- a/src/main/resources/templates/page-login.html
+++ b/src/main/resources/templates/page-login.html
@@ -26,6 +26,9 @@
     <link th:href="@{css/lib/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{css/lib/simdahs.css}" rel="stylesheet">
     <link th:href="@{css/style.css}" rel="stylesheet">
+
+	<!-- js -->
+<!--	<script type="text/javascript" th:src="@{js/example.js}"></script>-->
 </head>
 
 <body class="bg-primary">
@@ -36,7 +39,7 @@
 				<div class="col-lg-6 col-lg-offset-3">
 					<div class="login-content">
 						<div class="login-logo">
-							<a th:href="@{index}"><span>小康</span></a>
+							<a th:href="@{index}"><span>小康——电子病历管理系统</span></a>
 						</div>
 						<div class="login-form">
 							<h4>登录</h4>
