--- a/src/main/resources/templates/page-reset-password.html
+++ b/src/main/resources/templates/page-reset-password.html
@@ -36,7 +36,7 @@
 				<div class="col-lg-6 col-lg-offset-3">
 					<div class="login-content">
 						<div class="login-logo">
-							<a th:href="@{index}"><span>小康</span></a>
+							<a th:href="@{index}"><span>小康——电子病历管理系统</span></a>
 						</div>
 						<div class="login-form">
 							<h4>重设密码</h4>
